<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_inputs"
        android:backgroundTint="@color/background_dark"
        android:orientation="vertical"
        android:paddingHorizontal="6dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/close_help_dialog"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:paddingHorizontal="13dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/instructions_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mitrlight"
                    android:text="@string/instructions"
                    android:textColor="@color/grey"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/green_examplo"
                    android:layout_width="200dp"
                    android:layout_height="73dp"
                    android:src="@drawable/green_example" />

                <TextView
                    android:id="@+id/instructions_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mitrlight"
                    android:text="@string/instructions_2"
                    android:textColor="@color/grey"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/yellow_example"
                    android:layout_width="200dp"
                    android:layout_height="66dp"
                    android:src="@drawable/yellow_example" />

                <TextView
                    android:id="@+id/instructions_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mitrlight"
                    android:text="@string/instructions_3"
                    android:textColor="@color/grey"
                    android:textSize="15dp" />

                <ImageView
                    android:id="@+id/black_example"
                    android:layout_width="200dp"
                    android:layout_height="66dp"
                    android:src="@drawable/black_example" />

                <TextView
                    android:id="@+id/instructions_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mitrlight"
                    android:text="@string/instructions_4"
                    android:textColor="@color/grey"
                    android:textSize="15dp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>